--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 </head>
 
 <body id="body_id"
-	style="background:url('img/1.jpg') #0e055f; background-attachment: fixed ; background-size: cover;background-repeat: no-repeat;">
+	style="background:url('img/1.jpg') #1f0ccd; background-attachment: fixed ; background-size: contain;background-repeat: no-repeat;">
 
 	<section id="header" class="clearfix" style="background:#0e055f">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#0e055f">
 			<div class="container" style="background:#0e055f">
+				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button class="navbar-toggle" type="button" data-toggle="collapse"
 						data-target="#bs-example-navbar-collapse-1">
@@ -30,8 +31,9 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="index.html"><img src="./img/Umang_logo_white.png" width="200px" height="50px"></a>
+					<a href="index.html"><img src="./img/Umang_logo_white.png" / width="200px" height="50px"></a>
 				</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#0e055f">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="index.html">Home</a></li>
@@ -47,40 +49,44 @@
 		</nav>
 	</section>
 
-	<div class="footer">
-		<h2 style="color: white;display:inline">OUR EVENT IS COMING UP IN: </h2>
-		<h2 id="timer" style="color: white;display:inline"></h2>
-	</div>
+	<section id="center">
+		<div class="carousel fade-carousel slide responsive_img" data-ride="carousel" data-interval="4000"
+			id="bs-carousel">
+		</div>
+	</section>
 
-	<script>
-		// Set the date we're counting down to
-		var countDownDate = new Date("Nov 3, 2023 09:00:00").getTime();
+	<section id="footer">
+		<div class="container">
+			<div class="row">
+				<div class="footer_main">
+					<div class="col-sm-2">
+						<div class="footer_2">
+							<h3>Contact </h3>
+							<ul>
+								<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+										class="bi bi-whatsapp" viewBox="0 0 16 16">
+										<path
+											d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+									</svg> 91-7205171588</li>
+								<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+										class="bi bi-whatsapp" viewBox="0 0 16 16">
+										<path
+											d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+									</svg> 91-9619868548</li>
+								<li><i class="fa fa-envelope"><span
+											style="font-family: 'Philosopher', sans-serif;">SportsComm@iiitb.ac.in</span></i>
+								</li>
+								<li><i class="fa fa-map-marker"></i><a
+										href="https://maps.app.goo.gl/gnkwzvuP3n5ueCy9A">International Institute of
+										Information Technology, Bangalore</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-		// Update the count down every 1 second
-		var x = setInterval(function () {
-
-			// Get today's date and time
-			var now = new Date().getTime();
-
-			// Find the distance between now and the count down date
-			var distance = countDownDate - now;
-
-			// Time calculations for days, hours, minutes and seconds
-			var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-			var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-			var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-			var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-			// Output the result in an element with id="demo"
-			document.getElementById("timer").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-
-			// If the count down is over, write some text 
-			if (distance < 0) {
-				clearInterval(x);
-				document.getElementById("timer").innerHTML = "0d " + "0h " + "0m " + "0s ";
-			}
-		}, 1000);
-	</script>
 	<script src="js/classie.js"></script>
 	<script src="js/cbpAnimatedHeader.js"></script>
 </body>
