--- a/powerlifting.html
+++ b/powerlifting.html
@@ -120,12 +120,12 @@
 
                      <h3>Point of Contact</h3>
                      <ul style="list-style-type:disc">
-                        <li style="display: list-item; font-size: 18px;">Lalith - +91 9739611009</li>
-                        <li style="display: list-item; font-size: 18px;">Shathir - +91 8522006545</li>
+                        <li style="display: list-item; font-size: 18px;">Sparsh - +91 94796 44539</li>
+                        <li style="display: list-item; font-size: 18px;">Vidhu - +91 9501969884</li>
                      </ul>
                      <h3>Registration</h3>
 
-                     <a target="_blank" class="mybutton" href="https://forms.gle/kQcNHgBZFWZ6jr2GA">Men's</a>
+                     <a target="_blank" class="mybutton" href="https://forms.gle/zDjCzPgyUCBDLE758">Men's</a>
                      <a target="_blank" class="mybutton" href="https://forms.gle/ZE1pZphF4GF4SYxA8">Women's</a>
 
                      <br>
