--- a/events.html
+++ b/events.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Umang</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/index.css?v=1.2" rel="stylesheet">
 	<link href="css/global.css" rel="stylesheet">
 	<link href="css/details.css?v=1.2" rel="stylesheet">
 	<link href="css/element.css" rel="stylesheet">
@@ -14,9 +15,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
 	<script src="js/jquery-2.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap');
+	  </style>
 </head>
 
-<body>
+<body style="background-color: lightblue;">
 	<section id="header" class="clearfix" style="background:#0e055f">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#0e055f">
 			<div class="container" style="background:#0e055f">
@@ -57,7 +61,7 @@
 		</div>
 	</section>
 
-	<section id="blog">
+	<section id="blog" style="background-color: lightblue;">
 		<div class="container">
 			<div class="row" style="margin-left: 0px;margin-right: 0px;">
 				<div class="blog_1 clearfix myflex">
@@ -68,8 +72,8 @@
 								<div class="col-sm-6 mycard myflex">
 									<div class="news_3">
 										<a href="basketball.html" class="mycontainer">
-											<img src="img/basketball.png" alt="abc" class="img_responsive image"
-												width="570px" height="373px">
+											<img class="eveimg" src="img/basketball.png" alt="abc" class="img_responsive image"
+												width="440px" height="373px">
 										</a>
 									</div>
 									<div class="news_4 clearfix  myflex">
@@ -85,8 +89,8 @@
 								<div class="col-sm-6 mycard myflex">
 									<div class="news_3">
 										<a href="badminton.html" class="mycontainer">
-											<img src="img/badminton.png" alt="abc" class="img_responsive image"
-												width="570px" height="373px"></a>
+											<img class="eveimg" src="img/badminton.png" alt="abc" class="img_responsive image"
+												width="440px" height="373px"></a>
 									</div>
 									<div class="news_4 clearfix  myflex">
 										<div class="col-sm-12 space_all">
@@ -109,8 +113,8 @@
 								<div class="col-sm-6 mycard myflex">
 									<div class="news_3">
 										<a href="throwball.html" class="mycontainer">
-											<img src="img/throwball.png" alt="abc" class="img_responsive image"
-												width="570px" height="373px"></a>
+											<img class="eveimg" src="img/throwball.png" alt="abc" class="img_responsive image"
+												width="440px" height="373px"></a>
 									</div>
 									<div class="news_4 clearfix myflex">
 										<div class="col-sm-12 space_all">
@@ -124,13 +128,13 @@
 								<div class="col-sm-6 mycard myflex">
 									<div class="news_3">
 										<a href="volleyball.html" class="mycontainer">
-											<img src="img/volley_ball.png" alt="abc" class="img_responsive image"
-												width="570px" height="373px"></a>
+											<img class="eveimg" src="img/volley_ball.png" alt="abc" class="img_responsive image"
+												width="440px" height="373px"></a>
 									</div>
 									<div class="news_4 clearfix myflex">
 										<div class="col-sm-12 space_all">
 											<div class="news_6">
-												<h2 style="color: #0e055f;">VOLLEYBALL</h2>
+												<h2 style="color: #0e055f; ;">VOLLEYBALL</h2>
 											</div>
 										</div>
 									</div>
@@ -148,8 +152,8 @@
 								<div class="col-sm-6 mycard myflex">
 									<div class="news_3">
 										<a href="football.html" class="mycontainer">
-											<img src="img/football.png" alt="abc" class="img_responsive image"
-												width="570px" height="373px"></a>
+											<img class="eveimg" src="img/football.png" alt="abc" class="img_responsive image"
+												width="440px" height="373px"></a>
 									</div>
 									<div class="news_4 clearfix  myflex">
 										<div class="col-sm-12 space_all">
@@ -163,8 +167,8 @@
 								<div class="col-sm-6 mycard myflex">
 									<div class="news_3">
 										<a href="table_tennis.html" class="mycontainer">
-											<img src="img/table_tennis.png" alt="abc" class="img_responsive image"
-												width="570px" height="373px"></a>
+											<img class="eveimg" src="img/table_tennis.png" alt="abc" class="img_responsive image"
+												width="440px" height="373px"></a>
 									</div>
 									<div class="news_4 clearfix  myflex">
 										<div class="col-sm-12 space_all">
@@ -184,8 +188,8 @@
 								<div class="col-sm-6 mycard myflex">
 									<div class="news_3">
 										<a href="chess.html" class="mycontainer">
-											<img src="img/chess.png" alt="abc" class="img_responsive image"
-												width="570px" height="373px"></a>
+											<img class="eveimg" src="img/chess.png" alt="abc" class="img_responsive image"
+												width="440px" height="373px"></a>
 									</div>
 									<div class="news_4 clearfix">
 										<div class="col-sm-12 space_all">
@@ -198,8 +202,8 @@
 								<div class="col-sm-6 mycard myflex">
 									<div class="news_3">
 										<a href="powerlifting.html" class="mycontainer">
-											<img src="img/power_lifting.png" alt="abc" class="img_responsive image"
-												width="570px" height="373px"></a>
+											<img class="eveimg" src="img/power_lifting.png" alt="abc" class="img_responsive image"
+												width="440px" height="373px"></a>
 									</div>
 									<div class="news_4 clearfix">
 										<div class="col-sm-12 space_all">
@@ -230,12 +234,17 @@
 										class="bi bi-whatsapp" viewBox="0 0 16 16">
 										<path
 											d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
-									</svg> 91-7205171588</li>
+									</svg> Ayush 9811682443</li>
 								<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 										class="bi bi-whatsapp" viewBox="0 0 16 16">
 										<path
 											d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
-									</svg> 91-9619868548</li>
+									</svg> Akhil 7780744646</li>
+									<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+										class="bi bi-whatsapp" viewBox="0 0 16 16">
+										<path
+											d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z" />
+									</svg> Aditya 7022271553</li>
 								<li><i class="fa fa-envelope"><span
 											style="font-family: 'Philosopher', sans-serif; ">SportsComm@iiitb.ac.in</span></i>
 								</li>
