--- a/volleyball.html
+++ b/volleyball.html
@@ -108,7 +108,7 @@
                            this regard is final. </li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result in the
-                           disqualification of the participating institution from Umang 2022 and future events.</li>
+                           disqualification of the participating institution from Umang 2023 and future events.</li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">The Convener of Sports Committee (International
                            Institute of Information Technology, Bangalore) reserves the right to change the format or
@@ -132,7 +132,7 @@
                      <h3>Rules and Regulations</h3>
 
                      <a target="_blank"
-                        href="https://docs.google.com/document/d/1Oitz9Lp6sKxsczqsHvpljm76rsaJ5BT3/edit?usp=sharing&ouid=107229252669072287337&rtpof=true&sd=true"><button
+                        href="https://onedrive.live.com/edit.aspx?resid=208F410C3CC45CE3!191&ithint=file%2cdocx&wdo=2&authkey=!AJAC0tw88bI0D9w"><button
                            class="button">Download Rules and Regulations</button></a>
 
                   </div>
