--- a/table_tennis.html
+++ b/table_tennis.html
@@ -120,8 +120,8 @@
 
                      <h3>Point of Contact</h3>
                      <ul style="list-style-type:disc">
-                        <li style="display: list-item; font-size: 18px;">Adrij Sharma - +91 8439812886</li>
                         <li style="display: list-item; font-size: 18px;">Chinmay Parekh - +91 9619868548</li>
+                        <li style="display: list-item; font-size: 18px;">Vijay - +91 99725 88100</li>
                      </ul>
 
                      <h3>Registration</h3>
