--- a/sponsors.html
+++ b/sponsors.html
@@ -14,6 +14,29 @@
 	<link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
 	<script src="js/jquery-2.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<style>
+        /* Custom CSS to set a fixed height for the images */
+        .custom-image {
+            height: 200px; /* You can adjust this height as needed */
+        }
+		.image-container {
+            margin-bottom: 20px; /* Adjust margin as needed */
+            padding: 10px; /* Adjust padding as needed */
+        }
+		.i2-cont{
+			margin-bottom: 60px; /* Adjust margin as needed */
+            padding: 10px; 
+		}
+		.text-container{
+			margin-left:100px;
+		}
+		.text2-container{
+			margin-left:179px;
+		}
+		.text3-container{
+			margin-left:270px;
+		}
+    </style>
 </head>
 
 <body>
@@ -65,7 +88,38 @@
 				<div class="blog_1 clearfix myflex">
 					<div class="col-sm-7">
 						<div class="about">
-							<h3 style=" color: #0e055f;">Coming Soon!!!</h3>
+							<div class="container">
+								<div class="row">
+									<div class="col-md-12 ">
+										<div class="row mb-4 ">
+											<div class="col-md-12 d-flex justify-content-center align-items-center">
+												<div class="image-container">
+													<img src="img/UpGradLogo.png" alt="Image 2" class="img-fluid custom-image">
+													<span class="text-container" style="font-weight: bold; font-size: 18px;">Tier-1 sponsor</span>
+												</div>
+											</div>
+											
+										</div>
+										<div class="row mb-4 ">
+											<div class="col-md-12 d-flex justify-content-center align-items-center">
+												<div class="i2-cont">
+													<img src="img/punjab-national-bank-pnb-bank-logo-free-free-vector.jpg" alt="Image 2" class="img-fluid custom-image">
+													<span class="text2-container" style="font-weight: bold; font-size: 18px;">Tier-2 sponsor</span>
+												</div>
+											</div>
+					
+										</div>
+										<div class="row mb-4 ">
+											<div class="col-md-12 d-flex justify-content-center align-items-center">
+												<div class="image-container">
+													<img src="img/tfr.jpeg" alt="Image 2" class="img-fluid custom-image">
+													<span class="text3-container" style="font-weight: bold; font-size: 18px;">Tier-3 sponsor</span>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
